--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Merger</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,14 +15,24 @@
             color: red;
         }
     </style>
-</head>
+</head>    
 <body>
-    <h1>PDF Merger</h1>
-    <label for="url">Lecture Schedule URL: </label>
-    <input type="text" id="url" placeholder="e.g., https://ecs.wgtn.ac.nz/">
-    <button id="mergeBtn">Merge PDFs</button>
-    <p id="status"></p>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1 class="text-center my-4">PDF Merger</h1>
+                <div class="form-group">
+                    <label for="url">Lecture Schedule URL: </label>
+                    <input type="text" class="form-control" id="url" placeholder="e.g., https://ecs.wgtn.ac.nz/">
+                </div>
+                <button id="mergeBtn" class="btn btn-primary btn-block">Merge PDFs</button>
+                <p id="status" class="text-center mt-3"></p>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
