--- a/index.html
+++ b/index.html
@@ -18,9 +18,34 @@
             display: none;
             margin-top: 10px;
         }
+        #upload-icon {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            cursor: pointer;
+        }
+        .card-body {
+            position: relative;
+        }
+        #drop-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2em;
+            z-index: 1000;
+            display: none;
+        }
     </style>
 </head>
 <body>
+    <div id="drop-overlay">Drop files to upload</div>
     <div class="container">
         <div class="card mt-5">
             <div class="card-body">
@@ -42,6 +67,8 @@
                     </div>
                     <div id="pdfCheckboxes" class="form-group mt-3"></div>
                 </div>
+                <input type="file" id="fileElem" multiple accept="application/pdf" style="display:none">
+                <img id="upload-icon" src="upload-icon.png" alt="Upload PDFs" width="30" height="30">
             </div>
         </div>
     </div>
